Fix pre overflow

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -60,6 +60,7 @@ a:hover, a:active {
 }
 
 pre {
+  overflow: scroll;
   border-radius: 4px;
   padding: 10px 20px;
   background: #444;
